// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App snapshots should render error page 1`] = `
<DocumentFragment>
  <main>
    Error
  </main>
</DocumentFragment>
`;

exports[`App snapshots should render initializer 1`] = `
<DocumentFragment>
  <main>
    Init
  </main>
</DocumentFragment>
`;

exports[`App snapshots should render router 1`] = `
<DocumentFragment>
  <div
    class="css-wcnq0t"
    data-test-box=""
  >
    <div
      class="css-10h803n"
      data-test-box=""
    >
      <div
        class="css-wcnq0t MouseModes MouseModes--light"
        data-test-box=""
      >
        <div
          class="css-wcnq0t MouseModes__button MouseModes__button--light"
          data-test-box=""
        >
          <div
            class="css-wcnq0t Icon Icon--light Icon--neutral1 Icon--neutral1--light"
            data-test-icon="menu"
            height="16"
            name="Logo"
            width="16"
          />
        </div>
        <div
          class="css-wcnq0t MouseModes__button MouseModes__button--light MouseModes__button--active MouseModes__button--active--light"
          data-test-box=""
        >
          <div
            class="css-wcnq0t Icon Icon--light Icon--neutral1 Icon--neutral1--light"
            data-test-icon="default"
            height="16"
            name="MoveTool"
            width="16"
          />
        </div>
        <div
          class="css-wcnq0t MouseModes__button MouseModes__button--light"
          data-test-box=""
        >
          <div
            class="css-wcnq0t Icon Icon--light Icon--neutral1 Icon--neutral1--light"
            data-test-icon="move"
            height="16"
            name="MoveHand"
            width="16"
          />
        </div>
        <div
          class="css-wcnq0t MouseModes__button MouseModes__button--light"
          data-test-box=""
        >
          <div
            class="css-wcnq0t Icon Icon--light Icon--neutral1 Icon--neutral1--light"
            data-test-icon="comment"
            height="16"
            name="Comment"
            width="16"
          />
        </div>
        <div
          class="css-wcnq0t MouseModes__button MouseModes__button--light"
          data-test-box=""
        >
          <div
            class="css-wcnq0t Icon Icon--light Icon--neutral1 Icon--neutral1--light"
            data-test-icon="toolBeltA"
            height="16"
            name="FrameTool"
            width="16"
          />
        </div>
      </div>
    </div>
    <div
      class="css-s50csc PanelProperties PanelProperties--light"
      data-test-box="panel-properties"
    >
      <div
        class="PanelProperties__area-handle-resize PanelProperties__area-handle-resize--light"
        data-test-resize=""
      />
      <div
        class="css-wcnq0t Section Section--light"
        data-test-section=""
      >
        <div
          class="Section__header Section__header--light"
        >
          <small
            class="css-wcnq0t Section__label Section__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
            data-test-text=""
            style="text-align: inherit;"
          >
            Mode
          </small>
          <div
            class="Section__buttons Section__buttons--light"
          />
        </div>
        <div
          class="css-wcnq0t Tabs Tabs--light"
          data-test-box=""
        >
          <div
            class="Tabs__tab Tabs__tab--light Tabs__tab--active Tabs__tab--active--light"
            data-test-tab="design"
          >
            Design
          </div>
          <div
            class="Tabs__tab Tabs__tab--light"
            data-test-tab="prototype\`,"
          >
            Prototype
          </div>
        </div>
      </div>
      <div
        class="PanelProperties__sections PanelProperties__sections--light"
      >
        <div
          class="css-wcnq0t Section Section--light"
          data-test-section=""
        >
          <div
            class="Section__header Section__header--light"
          >
            <small
              class="css-wcnq0t Section__label Section__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
              data-test-text=""
              style="text-align: inherit;"
            >
              Page
            </small>
            <div
              class="Section__buttons Section__buttons--light"
            />
          </div>
          <div
            class="css-wcnq0t SectionColumn SectionColumn--light"
            data-test-section=""
          >
            <div
              class="SectionColumn__labels SectionColumn__labels--light"
              style="width: calc(100% - 24px - 0px - 8px);"
            />
            <div
              class="SectionColumn__wrapper SectionColumn__wrapper--light"
            >
              <div
                class="SectionColumn__content SectionColumn__content--light"
                style="width: calc(100% - 24px - 0px - 8px);"
              >
                <div
                  class="css-wcnq0t FieldGroup FieldGroup--light"
                  data-test-field-group=""
                >
                  <div
                    class="css-wcnq0t ColorPicker__hex-input ColorPicker__hex-input--light TextField TextField--light"
                    data-test-text-field="color"
                  >
                    <div
                      aria-describedby="test-id"
                    >
                      <div
                        class="css-wcnq0t Color Color--light"
                        data-test-color=""
                      >
                        <div
                          class="Color__picker Color__picker--light"
                          style="background-color: rgb(241, 242, 246);"
                        />
                        <div
                          class="Color__picker-alpha Color__picker-alpha--light"
                          style="background-color: rgb(241, 242, 246);"
                        />
                        <div
                          class="Color__picker-texture Color__picker-texture--light"
                        />
                      </div>
                    </div>
                    <input
                      class="TextField__input TextField__input--light"
                      data-test-text-field-input="color"
                      maxlength="6"
                      value="f1f2f6"
                    />
                  </div>
                  <div
                    class="css-wcnq0t ColorPicker__alpha-input ColorPicker__alpha-input--light TextField TextField--light"
                    data-test-text-field="alpha"
                  >
                    <input
                      class="TextField__input TextField__input--light"
                      data-test-text-field-input="alpha"
                      max="100"
                      maxlength="6"
                      min="0"
                      type="number"
                      value="100"
                    />
                    <div
                      class="ScrubbableInput ScrubbableInput--light"
                      data-test-scrubbable-input=""
                    >
                      %
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="SectionColumn__buttons SectionColumn__buttons--light"
              >
                <div
                  class="css-wcnq0t ButtonIcon ButtonIcon--light"
                  data-test-button-icon=""
                >
                  <div
                    class="css-wcnq0t Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="EyesOpened"
                    height="14"
                    name="EyesOpened"
                    width="14"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-mu34gm ViewBox ViewBox--light ZoomBox ZoomBox--light ZoomBox--idle ZoomBox--idle--light ZoomBox--default ZoomBox--default--light"
      data-test-box="zoom-box"
      tabindex="0"
    >
      <div
        class="css-wcnq0t ZoomBox__background-mask ZoomBox__background-mask--light"
        data-test-box=""
        style="background-color: rgb(241, 242, 246); display: initial;"
      />
      <div
        class="css-wcnq0t ZoomBox__texture-blank ZoomBox__texture-blank--light"
        data-test-box=""
        style="transform: translate(0px, 0px) scale(1);"
      />
      <div
        class="css-fw1hyy ZoomBox__zoom-content ZoomBox__zoom-content--light"
        data-test-box=""
        id="zoomContentId"
        style="transform: translate(0px, 0px) scale(1);"
      >
        <div
          class="css-13fj95k"
          data-test-box=""
          id="overlayContainer"
          style="z-index: var(--xd-page-builder-zindex-overlay-container);"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
